# todoist-cli

./: Cargo.toml  README.md
src/: cache.rs  client.rs  commands.rs  main.rs
src/commands/: filters.rs  labels.rs  list.rs  projects.rs  sync.rs  tasks.rs
