[package]
name = "todoist-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mohsen Alizadeh"]
description = "Todoist cli"
homepage = "https://github.com/mohsen-alizadeh/todoist-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
