[package]
name = "todoist-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mohsen Alizadeh"]
description = "Todoist cli"
homepage = "https://github.com/mohsen-alizadeh/todoist-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.34.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.6.5"

[profile.release]
lto = true
codegen-units = 1
